# quantum-chess-2

./: Cargo.toml  index.html
src/: game.rs  html.rs  main.css  main.js  main.rs  piece.rs
