[package]
name = "quantum-chess-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
sycamore = "0.8.2"
web-sys = {version="0.3.64", features = ["Window"]}
